--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+Temp/
+Library/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
@@ -57,4 +59,3 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
